blog | post 글 형식 수정하기

--- a/_posts/2020-05-23-web-vue-1.md
+++ b/_posts/2020-05-23-web-vue-1.md
@@ -1,5 +1,5 @@
 ---
-title: Web Vue | 1. Vue 기초
+title: "[Web Vue] 1. Vue 기초 다지기"
 author: youbin
 date: 2020-05-23 11:33:00 +0800
 categories: [Web, Vue]
