--- a/_posts/2021-01-12-sp-baekjoon-19236.md
+++ b/_posts/2021-01-12-sp-baekjoon-19236.md
@@ -1,5 +1,5 @@
 ---
-title: baekjoon | 19236. 청소년 상어
+title: "[baekjoon] 19236. 청소년 상어 (python)"
 author: youbin
 date: 2021-01-12 14:10:00 +0800
 categories: [Solve coding problems, baekjoon]
