--- a/_posts/2021-01-12-sp-baekjoon-19236.md
+++ b/_posts/2021-01-12-sp-baekjoon-19236.md
@@ -6,9 +6,9 @@ categories: [Solve coding problems, baekjoon]
 tags: [baekjoon, python]
 ---
 
-# [19236. 청소년 상어 문제 풀이](https://www.acmicpc.net/problem/19236)
+### [19236. 청소년 상어 문제 바로가기](https://www.acmicpc.net/problem/19236)
 
-## 해결 방법
+# 해결 방법
 
 1. ### 기본 설정
 
