--- a/_posts/2021-01-15-sp-baekjoon-19237.md
+++ b/_posts/2021-01-15-sp-baekjoon-19237.md
@@ -19,13 +19,11 @@ tags: [baekjoon, python]
 문제 중 일부 부분 `1000가 넘어도 다른 상어가 격자에 남아 있으면 -1을 출력한다.` 을 보고 1000초까지 괜찮은 건 줄 알았는 데 1000초 포함이였습니다~
 
 ```python
-# 고치기 전 before 
+# 고치기 전 before
 if time > 1000; break (X)
 # 고친 뒤 after
 if time ≥ 1000; break (이렇게 고쳤더니 통과됐어요!)
 ```
-
-
 
 # 해결 방법
 
@@ -33,7 +31,7 @@ if time ≥ 1000; break (이렇게 고쳤더니 통과됐어요!)
 
 상어 번호와 방향은 모두 0부터 시작되도록 초기 입력을 받을 때 1을 빼주었습니다.
 
-------
+---
 
 먼저 원하는 형태로 ocean에 저장했습니다.
 
@@ -55,21 +53,17 @@ ocean = [
 2. [상어번호, 남은 시간] : 상어는 없고 냄새가 남아있는 경우
 3. [상어번호, k, 방향] : 상어가 있는 경우
 
-next_ocean = [[0] * N for _ in range(N)] 초기화된 리스트에 아래 1, 2번 과정을 실행합니다.
-
-
+next*ocean = [[0] \* N for * in range(N)] 초기화된 리스트에 아래 1, 2번 과정을 실행합니다.
 
 <span style="color:purple">1. 상어가 없고 냄새가 남아있는 경우 남은 시간 -1을 해준 것을 저장하기</span>
 
 <span style="color:purple">2. 상어가 있는 경우 현 위치를 [상어번호, k - 1] 형태로 저장한 뒤 이동할 위치를 찾아 [상어번호, k, 방향]의 형태로 저장하기</span>
 
-​	<span style="color:purple">→ 이때 next_ocean에 이미 상어가 있다면 크기를 비교해서 번호가 작은 상어로 저장하고 out 변수에 + 1을 시켜 격자 위로 사라진 상어를 카운트 하기</span>
+​ <span style="color:purple">→ 이때 next_ocean에 이미 상어가 있다면 크기를 비교해서 번호가 작은 상어로 저장하고 out 변수에 + 1을 시켜 격자 위로 사라진 상어를 카운트 하기</span>
 
 deepcopy를 이용하여 ocean에 next_ocean을 저장하고 **<span style="color:purple">위 과정</span>**을 반복하며 상어가 1마리 남았을 경우 time을 출력하도록 합니다.
 
-if time ≥ 1000인 경우 time = -1  상태로 작동을 멈추면 끝납니다!
-
-
+if time ≥ 1000인 경우 time = -1 상태로 작동을 멈추면 끝납니다!
 
 ## 구현한 코드
 
@@ -101,7 +95,7 @@ for _ in range(M):
         for t2 in range(4):
             temp[t1][t2] -= 1
     shark_dir.append(temp)
-    
+
 dir = [[-1, 0], [1, 0], [0, -1], [0, 1]]
 
 out = 0 # 상어가 격자 밖으로 쫓겨나는 경우 cnt
@@ -110,9 +104,9 @@ while out < M - 1:
     if time >= 1000: # 조건 중요!
         time = -1
         break
-        
+
     time += 1
-    next_ocean = [[0] * N for _ in range(N)] 
+    next_ocean = [[0] * N for _ in range(N)]
 
     for y in range(N):
         for x in range(N):
@@ -123,7 +117,7 @@ while out < M - 1:
                     pass
                 else:
                     next_ocean[y][x] = [ocean[y][x][0], ocean[y][x][1] - 1]
-                    
+
             # 2. 상어 이동시키기
             if ocean[y][x] != 0 and len(ocean[y][x]) == 3: # 상어가 있는 경우
                 # 2-1. 현재 자리 냄새 기록하기
@@ -133,7 +127,7 @@ while out < M - 1:
                 num, sd = ocean[y][x][0], ocean[y][x][2]
                 frag = True # 냄새 없는 칸이 없는 경우 true 유지
                 frag_temp = []
-                
+
                 for d in range(4):
                     nd = shark_dir[num][sd][d]
                     ny, nx = y + dir[nd][0], x + dir[nd][1]
