blog | post modify

--- a/_posts/2020-10-17-sp-baekjoon-13458.md
+++ b/_posts/2020-10-17-sp-baekjoon-13458.md
@@ -62,7 +62,8 @@ for i in range(len(candidate)):
     diff = people - B
     q, r = divmod(diff, C)
     cnt += q
-    if r != 0: cnt += 1
+    if r != 0:
+        cnt += 1
 
 print(cnt)
 ```
